# gaussian-process

./: .gitignore  CMakeLists.txt  README.md
include/: gaussian_process.h  kernel_base.h  rbf_kernel.h
src/: gaussian_process.cpp  rbf_kernel.cpp
test/: test_add_data.cpp  test_exponential_rbf.cpp  test_gaussian_rbf.cpp  test_gp.cpp  test_incremental_learning.cpp  test_logarithmic_rbf.cpp  test_quadratic_rbf.cpp  test_sine_rbf.cpp
